# Approval-Hub-Frappe

./: README.md  pyproject.toml
approval_hub_frappe/: hooks.py  modules.txt
approval_hub_frappe/api/: approval_hub.py
approval_hub_frappe/approval_hub_frappe/doctype/approval_hub_doctype_config/: approval_hub_doctype_config.js  approval_hub_doctype_config.json  approval_hub_doctype_config.py  test_approval_hub_doctype_config.py
approval_hub_frappe/approval_hub_frappe/doctype/approval_hub_field_config/: approval_hub_field_config.json  approval_hub_field_config.py
approval_hub_frappe/approval_hub_frappe/doctype/approval_hub_log/: approval_hub_log.js  approval_hub_log.json  approval_hub_log.py  test_approval_hub_log.py
approval_hub_frappe/approval_hub_frappe/doctype/approval_hub_settings/: approval_hub_settings.js  approval_hub_settings.json  approval_hub_settings.py  test_approval_hub_settings.py
approval_hub_frappe/approval_hub_frappe/page/approval_hub/: approval_hub.css  approval_hub.js  approval_hub.json  approval_hub.py
approval_hub_frappe/services/: log_service.py  pending_engine.py  workflow_service.py
approval_hub_frappe/utils/: config_utils.py  permission_utils.py  settings_utils.py
