[project]
name = "approval_hub_frappe"
authors = [
    { name = "Ahmad Zubair Amini", email = "zubairamini.cs@gmail.com" }
]
description = "Approval Hub Frappe"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=15.0.0,<18.0.0"
]

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]