[project]
name = "approval_hub_frappe"
authors = [
    { name = "Ahmad Zubair Amini", email = "zubairamini.cs@gmail.com" }
]
description = "Approval Hub Frappe"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Frappe is installed and managed by bench.
]

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<18.0.0"

[tool.bench.dev-dependencies]